Added configurable java options